# machine-learning-labs

./: .gitignore  README.md  pyproject.toml
src/machine_learning_labs/: __init__.py
src/machine_learning_labs/MS_Learn/: 1-7-exercise-test-ml-models.ipynb
src/machine_learning_labs/MS_Learn/01/: 1-3-exercise-create-ml-model.ipynb  1-5-exercise-improve-models.ipynb
src/machine_learning_labs/MS_Learn/02/: 2-3-exercise-separate-data-test-model.ipynb  2-5-exercise-optimize-models.ipynb  2-7-exercise-implement-gradient-descent.ipynb
src/machine_learning_labs/MS_Learn/03/: 3-3-exercise-detect-visualize-missing-data.ipynb  3-5-exercise-normalize-data-predict-missing-values.ipynb  3-7-exercise-one-hot-vectors.ipynb
src/machine_learning_labs/MS_Learn/04/: 01-numpy-and-pandas.ipynb  02-visualize-data.ipynb  03-real-world-data.ipynb
src/machine_learning_labs/Supervised_Machine_Learning/C1_W1/Labs/: C1_W1_Lab01_Python_Jupyter_Soln.ipynb  C1_W1_Lab03_Model_Representation_Soln.ipynb  C1_W1_Lab04_Cost_function_Soln.ipynb  C1_W1_Lab05_Gradient_Descent_Soln.ipynb
