[project]
name = "machine-learning-labs"
version = "0.1.0"
description = "Machine Learning Labs"
authors = [
    { name = "Sriram Peddapanta", email = "SriramPeddapanta@users.noreply.github.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.2.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "ipympl>=0.9.6",
    "statsmodels>=0.14.4",
    "requests>=2.32.3",
    "joblib>=1.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/machine_learning_labs"]
